demo/python/jitfailure-dolfin_expression_5fc65e35019472c7873c573bd7f6c92f/error.log
/tmp/tmpr4mbaij8/dolfin_expression_5fc65e35019472c7873c573bd7f6c92f.cpp: In member function ‘virtual void dolfin::dolfin_expression_5fc65e35019472c7873c573bd7f6c92f::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpr4mbaij8/dolfin_expression_5fc65e35019472c7873c573bd7f6c92f.cpp:61:33: error: ‘r’ was not declared in this scope
           values[0] = acos(x[2],r);
                                 ^
